--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 	"manifest_version": 2,
 	"name": "tl;dr Summarizer",
 	"description": "tl;dr Summarizer finds long comments on Reddit and summarises them! In fact, you can summarise any lengthy article online.",
-	"version": "0.1",
+	"version": "0.22",
 	
 	"icons": {
 		"16": "tldrcontext.png",
@@ -14,12 +14,12 @@
 	},
 	
 	"content_scripts": [{
-		"matches": ["http://*/*"],
+		"matches": ["http://*/*", "https://*/*"],
 		"css": ["summary.css"],
 		"js": ["jquery.js", "summariser.js", "summary.js"]
 	}],
 	
 	"permissions": [
-		"tabs", "http://*/*", "contextMenus"
+		"tabs", "http://*/*", "https://*/*", "contextMenus"
 	]
 }
