--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 	"manifest_version": 2,
 	"name": "Summarizer",
 	"description": "Summarizer finds long comments on Reddit and summarises them! In fact, you can summarise any lengthy article online.",
-	"version": "0.43",
+	"version": "0.44",
 	
 	"icons": {
 		"16": "images/temple/micro.png",
@@ -12,6 +12,8 @@
 	"background": {
 		"scripts": ["background.js"]
 	},
+	
+	"options_page": "options.html",
 	
 	"content_scripts": [{
 		"matches": ["http://*/*", "https://*/*"],
