--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
 	"content_scripts": [{
 		"matches": ["http://*/*", "https://*/*"],
 		"css": ["summary.css"],
-		"js": ["jquery.js", "summariser.js", "summary.js"]
+		"js": ["jquery.js", "summariser.js", "summary.js", "parse.js"]
 	}],
 	
 	"permissions": [
