Parse pages, using background thread

--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
 	},
 	
 	"background": {
-		"scripts": ["background.js", "summariser.js", "parse.js"]
+		"scripts": ["background.js", "summariser.js"]
 	},
 	
 	"options_page": "options.html",
